* Added 12 most recent prayers from Bahá'u'lláh from bahai.org * Several corrections to English prayers (reported by email)

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ pbdbbuilder.xcodeproj/*.pbxuser
 pbdbbuilder.xcodeproj/xcuserdata*
 pbdbbuilder.xcodeproj/project.xcworkspace/xcuserdata*
 pbdbbuilder.xcodeproj/project.xcworkspace/xcshareddata*
+*.DS_Store
